Fixed Perma abilities